# Brownfield-Cartographer

./: .env.example  .gitignore  Dockerfile  README.md  RECONNAISSANCE.md  pyproject.toml
.cartography/.cartography-jaffle-shop/: CODEBASE.md  analysis_report.txt  cartography_trace.jsonl  day_one_answers.json  hydrologist_report.txt  hydrologist_validation.txt  lineage_graph.html  lineage_graph.json  metadata.json  module_graph.html  module_graph.json  onboarding_brief.md  semanticist_report.txt  surveyor_report.txt  validation_report.md
docs/: CLI_USAGE.md  HYDROLOGIST_VALIDATION_SUMMARY.md  NAVIGATOR_AGENT.md  NAVIGATOR_TOOLS.md  TRACE_LOGGER.md
examples/: analyze_airflow_lineage.py  analyze_repo.py  compare_dbt_lineage.py  navigator_agent_example.py  navigator_tools_example.py  run_archivist.py  simple_example.py  trace_logger_example.py  validate_archivist_navigator.py  validate_hydrologist.py
src/: cli.py  orchestrator.py
src/agents/: __init__.py  archivist.py  context_budget.py  day_one_answerer.py  domain_clusterer.py  drift_detector.py  hydrologist.py  incremental_update_manager.py  navigator.py  onboarding_brief_generator.py  purpose_generator.py  semanticist.py  surveyor.py  trace_logger.py
src/analyzers/: __init__.py  dag_config_parser.py  dbt_project_analyzer.py  git_velocity_analyzer.py  graph_serializer.py  language_router.py  python_data_flow_analyzer.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: __init__.py  knowledge_graph.py
src/models/: __init__.py  models.py
src/utils/: __init__.py  setup_grammars.py  (+1 more)
tests/: __init__.py
(+20 files in other folders)
